syntax = "proto3";

package pb_crawl;

option go_package = "./;pb_crawl";


message CrawledFilms {
    repeated CrawledFilm Films = 1;
}

message CrawledFilm {
    string Name = 1;
    string Year = 2;
    double Rating = 3;
}

message ResCrawl {}

service BizService {
    rpc CrawlFilm (CrawledFilms) returns (ResCrawl) {};
}